# VINS-Mono-noted

Docs/homework_1/undistorted/: CMakeLists.txt  main.cpp
camera_model/src/camera_models/: PinholeCamera.cc
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
pose_graph/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  parameters.cpp
vins_estimator/src/factor/: integration_base.h
